# samples

./: README.md
mcp/python/: README.md  pyproject.toml  ucp_mcp_client.py  ucp_mcp_server.py
rest/nodejs/: package-lock.json  package.json
